--- a/manuscript.tex
+++ b/manuscript.tex
@@ -1,14 +1,20 @@
 \documentclass[11pt]{article}
 \usepackage{fullpage}
+\usepackage{multirow}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage{authblk}
+
 \title{Gender disparity in computational biology research publications}
-\author[1][2]{Kevin S. Bonham, PhD\thanks{kevin_bonham@hms.harvard.edu}}
-\author[3]{Melanie I. Stefan, PhD}
-\affil[1]Microbiology and Immunobiology, Harvard Medical School. Boston, MA, USA
-\affil[2]Curriculum Fellows Program and Educational Laboratory, Harvard Medical School. Boston, MA, USA
-\affil[3]Centre for Integrative Physiology, Edinburgh Medical School: Biomedical Sciences, University of Edinburgh. Edinburgh, United Kingdom
+\author[1]{Kevin S. Bonham, PhD}
+\author[2]{Melanie I. Stefan, PhD}
+\affil[1]{Microbiology and Immunobiology, Harvard Medical School. Boston, MA, USA}
+\affil[2]{Centre for Integrative Physiology, Edinburgh Medical School. Biomedical Sciences, University of Edinburgh. Edinburgh, United Kingdom}
+
+\renewcommand\Authands{ and }
 
 \begin{document}
-
+\maketitle
 \section{Abstract}
 While women are generally underrepresented in STEM fields, there are noticeable differences between fields. For instance, the gender ratio in biology is more balanced than in computer science. We were interested in how this difference is reflected in the interdisciplinary field of computational/quantitative biology. To this end, we examined the proportion of female authors in publications from the PubMed and arXiv databases. There are fewer female authors on research papers in computational biology, as compared to biology in general. This is true across authorship position, year, and journal impact factor. A comparison with arXiv shows that quantitative biology papers have a higher ratio of female authors than computer science papers, placing computational biology in between its two parent fields in terms of gender representation. Both in biology and in computational biology, a female last author increases the probability of other authors on the paper being female, pointing to a potential role of female PIs in influencing the gender balance.
 
@@ -28,98 +34,14 @@ To determine the gender of authors, we used the web service Gender-API.com, whic
 
 We validated this method by comparing it to a set of 2155 known author:gender pairs from the biomedical literature provided by Filardo et. al.[12] Filardo and colleagues manually determined the genders of the first authors for over 3000 papers by searching for authors’ photographs on institutional web pages or social media profiles like LinkedIn. We used our computational inference of gender for a subset of this data, which suggested $P_{female}$ = 0.373, 95\% CI = [0.350, 0.396], compared to the known gender, which gave $P_{female}$ = 0.360 (using the same bootstrap analysis, 95\% CI = [0.342, 0.379]) (Supplementary Figure 1C). Because Gender-API does not have information for a subset of names (43\% of unique names in our Biology dataset, representing 26.6\% of authors), these names are excluded from our analysis. In order to ensure that this was not skewing our analysis, we also determined the $P_{female}$ in Filardo et al.'s known gender dataset excluding those authors, giving $P_{female}$ = 0.381, 95\% CI = [.354, 0.409]. Together, these results suggest that our method of automatically assigning gender using Gender-API gives comparable result to hand-curated gender assignment, and that excluding names without clear gender information does not lead us to underestimate the proportion of women in our dataset.
 
-We began by analyzing the gender representation in primary publications from 1997 to 2014. Consistent with previous publications, women were substantially less likely to be in senior author positions than first author positions in publications labeled with the Biology (Bio) MeSH term (Last author, $P_{female}$ = 0.245, 95\% CI = [0.243, 0.247], First author, $P_{female}$ = 0.376, 95\% CI = [0.373, 0.378]). (Figure 1A, Table 1). We observed the same trend in papers labeled with the computational biology (comp) MeSH term, though the $P_{female}$ at every author position was 4-6  percentage points lower. An analysis of publications by year suggests that the gender gaps in both biology and computational biology are narrowing, but by less than 1 percentage point  per year (for bio, Δ$P_{female}$ = 0.0035 / year, 95\% CI = [0.0030, 0.0040]. For comp, Δ$P_{female}$ = 0.0049 / year, 95\%CI = [0.0041, 0.0057]). However, the discrepancy between biology and computational biology has been consistent over time (Figure 1B).
+We began by analyzing the gender representation in primary publications from 1997 to 2014. Consistent with previous publications, women were substantially less likely to be in senior author positions than first author positions in publications labeled with the Biology (Bio) MeSH term (Last author, $P_{female}$ = 0.245, 95\% CI = [0.243, 0.247], First author, $P_{female}$ = 0.376, 95\% CI = [0.373, 0.378]). (Figure 1A, Table 1). We observed the same trend in papers labeled with the computational biology (comp) MeSH term, though the $P_{female}$ at every author position was 4-6  percentage points lower. An analysis of publications by year suggests that the gender gaps in both biology and computational biology are narrowing, but by less than 1 percentage point  per year (for bio, change in $P_{female}$ = 0.0035 / year, 95\% CI = [0.0030, 0.0040]. For comp, change in $P_{female}$ = 0.0049 / year, 95\%CI = [0.0041, 0.0057]). However, the discrepancy between biology and computational biology has been consistent over time (Figure 1B).
 
 Table 1
-\begin{tabular}{l l c c c}
-Table 1 & & & \multicolumn{2}{c}{95\% CI} \\
-Dataset & Position & Mean & Lower & Upper
-\multirow{5}{c}{bio} & first & 0.376 & 0.373 & 0.378 \\
-& second & 0.379 & 0.376 & 0.381 \\
-& other & 0.368 & 0.367 & 0.370 \\
-& penultimate & 0.279 & 0.277 & 0.282 \\
-& last & 0.245 & 0.243 & 0.247 \\
-\multirow{5}{c}{comp} & first & 0.316 & 0.312 & 0.320 \\
-& second & 0.322 & 0.317 & 0.327 \\
-& other & 0.331 & 0.328 & 0.333 \\
-& penultimate & 0.236 & 0.231 & 0.241 \\
-& last & 0.207 & 0.203 & 0.211
-\end{tabular}
 
 One possible explanation for the difference in male and female authorship position might be a difference in role models or mentors. If true, we would expect studies with a female principal investigator to be more likely to attract female collaborators. Conventionally in biology,  the last author on a publication is the principal investigator on the project. Therefore, we looked at two subsets of our data: publications with a female last author ($P_{female}$ > 0.8) and those with a male last author ($P_{female}$ < 0.2). We found that women were substantially more likely to be authors at every other position if the paper had a female last author than if the last author was male (Figure 1C, Table 2). It is possible that female trainees are be more likely to pursue computational biology if they have a mentor that is also female. Since women are less likely to be senior authors, this might reduce the proportion of women overall.
 
 
 Table 2
-Male Last Author
-Female Last Author
-Dataset
-Position
-Mean
-95\% CI
-Mean
-95\% CI
-Lower
-Upper
-Lower
-Upper
-bio
-first
-0.362
-0.359
-0.365
-0.478
-0.472
-0.484
-second
-0.359
-0.357
-0.362
-0.46
-0.454
-0.466
-other
-0.355
-0.353
-0.357
-0.425
-0.421
-0.428
-penultimate
-0.259
-0.256
-0.263
-0.336
-0.330
-0.343
-comp
-first
-0.305
-0.300
-0.311
-0.390
-0.378
-0.402
-second
-0.306
-0.300
-0.312
-0.379
-0.366
-0.392
-other
-0.321
-0.318
-0.324
-0.368
-0.361
-0.376
-penultimate
-0.223
-0.218
-0.229
-0.263
-0.249
-0.277
 
 Though MeSH terms enable sorting a large number of papers regardless of where they are published, the assignment of these terms is a manual process and may not be comprehensive for all publications. As another way to qualitatively examine gender differences in publishing, we examined different journals, since some journals specialize in computational papers, while others are more general. We looked at the 123  journals that had at least 1000 authors in our bio dataset, and determined $P_{female}$ for each journal separately (Figure 2A). Of these journals, 21 (14\%) have titles indicative of computational biology or bioinformatics, and these journals have substantially lower representation of female authors. The 3 journals with the lowest female representation and 6 out of the bottom 10 are all journals focused on studies using computational methods. Only 4 computational biology/bioinformatics journals are above the median of female representation.
 
@@ -128,59 +50,8 @@ One possible explanation might be that women are less likely to publish in high-
 Taken together, these data suggest that the authors of computational biology papers are less likely to be women than the authors of biology papers generally. However, since Pubmed does not index computer science publications, we cannot compare computational biology to computer science. Instead, we turned to data from arXiv, a preprint repository for academic papers used frequently by quantitative fields like mathematics and physics. These preprint records cannot be directly compared to peer-reviewed publications indexed on pubmed, but a “quantitative biology” section was added to arXiv in 2003. There are relatively few papers preprints prior to 2007, so we compared preprints in “quantitative biology” to those in “computer science” from 2007-2016.
 
 Women were more likely to be authors in quantitative biology than in computer science in first, second, and middle author positions (Figure 3A, Table 3), though the conventions for determining author order are not necessarily the same in computer science. Nevertheless, women had higher representation in quantitative biology than in computer science for all years except 2009 (Figure 3B). Interestingly, there is a slight but significant (p < 0.05) increase in the proportion of female authors over time in quantitative biology, while there’s no significant increase in computer science preprints.
+
 Table 3
-
-
-
-
-95\% CI
-Dataset
-Position
-Mean
-Lower
-Upper
-arxivbio
-first
-0.184
-0.178
-0.190
-second
-0.210
-0.200
-0.219
-other
-0.265
-0.253
-0.276
-penultimate
-0.196
-0.183
-0.209
-last
-0.148
-0.141
-0.155
-arxivcs
-first
-0.157
-0.155
-0.160
-second
-0.175
-0.172
-0.179
-other
-0.188
-0.182
-0.195
-penultimate
-0.175
-0.170
-0.181
-last
-0.155
-0.153
-0.158
 
 Taken together, our results suggest that computational biology lies between biology in general and computer science when it comes to gender representation in publications. This is perhaps not surprising given the interdisciplinary nature of computational biology. Compared to biology in general, computational biology papers have fewer female authors, and this is consistent across all authorship positions. Importantly, this difference is not due to a difference in impact factor between computational biology and general biology papers.
 
@@ -234,3 +105,5 @@ Casper Strømgren for the free use of genderize.io info@genderize.io
 Giovanni Filardo for sharing data [12]
 Johanna Gutlerner, Marshall Thomas, Diane Lam, and other members of the Curriculum Fellows Program (CFP) at Harvard Medical School (HMS) for helpful feedback and discussions
 The HMS CFP and Educational Laboratory for resources and mentorship
+
+\end{document}
